--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     user-select: none;
 }
 body{
+    background-image: url(image.jpg);
     background-color: #414141;
     display: flex;
     flex-direction: column;
@@ -12,13 +13,13 @@ body{
 }
 
 .name{
-    font-size: 80px;
+    font-size: 90px;
     font-family: cursive;
-    color: greenyellow;
+    color: #00ffae;
     transition: 1s;
 }
 .name:hover{
-    font-size: 85px;
+    font-size: 95px;
     text-shadow:
     -2px -2px 0 green,
     2px -2px 0 green,
@@ -47,8 +48,8 @@ body{
 }
 .para1{
     font-size: 150px;
-    border: 2px solid rgb(0, 255, 0);
-    color: rgb(0, 255, 0);
+    border: 2px solid #00ffae;
+    color: #00ffae;
     font-family: cursive;
     margin:0px 100px 0px 100px;
     padding: 0px 75px 15px 75px;
@@ -58,13 +59,13 @@ body{
 }
 .para2{
     font-size: 150px;
-    border: 2px solid red;
-    color: red;
+    border: 2px solid rgb(255, 61, 236);
+    color: #FF3DEC;
     font-family: cursive;
     margin:0px 100px 0px 100px;
     padding: 0px 75px 15px 75px;
     border-radius: 75px;
-    background-color: rgb(255, 0, 0,0.1);
+    background-color: rgb(255, 61, 236,0.1);
     transition: 0.5s;
 }
 .para1:hover{
@@ -84,11 +85,11 @@ body{
     color: #414141;
 }
 .outerBox{
-    border: 5px solid greenyellow;
+    border: 3px solid white;
     border-radius: 30px;
     width: 500px;
     height: 500px;
-    background-color: greenyellow;
+    background-color: #d900ff;
     transition: 1s;
     position: relative;
     bottom: 450px;
@@ -102,7 +103,7 @@ body{
 .outerBox:hover{
     width: 510px;
     height: 510px;
-    border: 3px solid green;
+    border: 3px solid #d900ff;
 }
 .innerBox{
     padding: none;
@@ -132,15 +133,15 @@ body{
     transition: opacity 0.4s ease;
 }
 .zerotick{
-    background-color: rgb(65, 65, 65,0.8);
+    background-color: #4e7468;
 }
 .crosstick{
-    background-color: rgb(95, 51, 51);
+    background-color: #84427d;
 }
 .oxox1{
     font-size: 130px;
     font-family: cursive;
-    color: rgb(0, 255, 0);
+    color: #00ffae;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,7 +149,7 @@ body{
 .oxox2{
     font-size: 130px;
     font-family: cursive;
-    color: red;
+    color: #FF3DEC;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -157,6 +158,8 @@ body{
     color: white;
     font-size: 350px;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -173,6 +176,27 @@ body{
 }
 .result:hover{
     font-size: 320px;
-    color: greenyellow;
-    background-color: #313131;    
+    color: #bb00ff;
+    background-color: #313131; 
+}
+.playagain{
+    background-color: rgb(217, 0, 255,0.2);
+    font-size: 60px;
+    color: #d900ff;
+    padding: 15px;
+    border: 3px solid #d900ff;
+    border-radius: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    transform: translateY(150px);
+    transition: 0.75s;
+    transition: color 0.1s;
+}
+.playagain:hover{
+    font-size: 58px;
+    padding: 14px;
+    border: 2px solid #d900ff;
+}
+.playagain:active{
+    color: #414141;
+    background-color: #d900ff;
 }
